--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
     "react-hot-toast": "^2.4.1",
-    "react-router-dom": "^6.22.2"
+    "react-router-dom": "^6.22.2",
+    "sharp": "^0.34.2"
   },
   "devDependencies": {
     "@tsconfig/node18": "^18.2.4",
